--- a/ShoesPage/ShoesPageWithPosition.html
+++ b/ShoesPage/ShoesPageWithPosition.html
@@ -22,7 +22,7 @@
             Rem, dolore.
           </p>
         </div>
-        <img class="shoe-1" src="./assets/shoe-1.png" alt="shoe1" />
+        <img class="shoe-1" src="https://github.com/Ganesh-Patel/Geekster-Assignment/blob/main/assets/shoe-1.png" alt="shoe1" />
     </div>
 
   </div>  
