--- a/MediaQuery/index.html
+++ b/MediaQuery/index.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Media Query</title>
 </head>
 <body>
-    <div class="MainContainer">
+  <div class="Container1"></div> 
+  <div class="Container2">
+    <img alt="NicePage.com" src="img.png">
+    <div class="content">
+        <div class="subcontent">
 
-
-
+        <h1>Certified Coffee Courses</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit, sed do eiusmod tempor <br>incididunt ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam, quis nostrud<br> exercitation ullamco.</p>
+        <p id="p2"><span>Image from <a href="#">Freepik</a></span></p>
+        <button class="btn">Learn More</button>
+        </div>
     </div>
+  </div>  
 </body>
 </html>
