--- a/MediaQuery/index.html
+++ b/MediaQuery/index.html
@@ -25,7 +25,7 @@
       background-color: #F0C50A;
       display: flex;
       flex-wrap: wrap;
-      gap: 100px;
+      gap: 300px;
       justify-content: center;
     }
     .bottom-container>div{
@@ -33,7 +33,8 @@
       width: 400px;
     }
     img{
-      width: 80%;
+      width: 100%;
+      height: 100%;
       align-items: center;
       height: 320px;
       transform: translateY(-40px);
@@ -70,6 +71,10 @@
     .container{
         flex-direction: column;
       align-items: center;
+    }
+    .bottom-container{
+        gap: 50px;
+        padding: 20px;
     }
   }
   </style>
