--- a/MediaQuery/index.html
+++ b/MediaQuery/index.html
@@ -63,6 +63,9 @@
     margin-top: 25px;
     border: none;
   }
+  .text-container{
+    margin-top: 100px;;
+  }
   @media only screen and (max-width: 768px) {
     .Container2 {
       flex-direction: column;
@@ -76,6 +79,9 @@
         gap: 50px;
         padding: 20px;
     }
+    .text-container{
+    margin-top: 0px;;
+  }
   }
   </style>
 </head>
@@ -84,7 +90,7 @@
     <div class="top-container"container></div>
     <div class="bottom-container">
       <div><img alt="NicePage.com" src="img.png"></div>
-      <div>
+      <div class="text-container">
         <h1>Certified Coffee Courses</h1>
         <p>Lorem ipsum dolor sit amet, consectetur<br> adipiscing elit, sed do eiusmod tempor <br>incididunt ut labore
           et dolore magna aliqua.<br> Ut enim ad minim veniam, quis nostrud<br> exercitation ullamco.</p>
