--- a/MajorProject/index.html
+++ b/MajorProject/index.html
@@ -8,31 +8,34 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <header class="header">
 
 
         <nav>
 
-            <div>
-                <img>
-                <span>Aria</span>
+            <div class="left-nav">
+                <img src="https://www.free-css.com/assets/files/free-css-templates/preview/page259/aria/assets/images/logo.svg" height="80px" width="80px"  >
 
             </div>
-            <ul>
+            <div class="right-nav">
+                <ul>
 
-                <li ><a href="#home">Home</a></li>
-                <li href="" id="">Intro</li>
-                <li href="" id="">Services</li>
-                <li href="" id="">Call me</li>
-                <li href="" id="">Projects</li>
-                <li href="" id="">About</li>
-                <li href="" id="">contact</li>
-            </ul>
-            <ul>
-                    <li><i class="fa-brands fa-facebook"></i></li>
-                    <li><span>Icon</span></li>
+                    <li ><a href="#home">Home</a></li>
+                    <li ><a href="#Intro">Intro</a></li>
+                    <li ><a href="#Services">Services</a></li>
+                    <li ><a href="#Call-me">Call me</a></li>
+                    <li ><a href="#Projects">Projects</a></li>
+                    <li ><a href="#About">About</a></li>
+                    <li ><a href="#contact">contact</a></li>
+                </ul>
+                <ul>
+                        <li><i class="fa-brands fa-facebook"></i></li>
+                        <li><i class="fa-brands fa-square-twitter"></i></li>
+    
+                </ul>
 
-            </ul>
+            </div>
+            
         </nav>
     </header>
     <section class="homepage" id="home">
