--- a/Weeklytest6-CSS@/index.html
+++ b/Weeklytest6-CSS@/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title> Boosted Electric Scooters and Skateboards, Longboards | In Stock</title>
+    <link rel="icon" type="image/png" href="https://b.thumbs.redditmedia.com/Ac0pEtaDRQCIj55pwt6bGMLrkN82qMyHi1XG1PpEn7s.png">
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
